mux-compiler/tests/snapshots/executable_integration__executable_integration__error_auto_empty_collection.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Cannot infer type for empty set or map literal
--> test_scripts/error_cases/error_auto_empty_collection.mux:3:14
   |
 3 |     auto x = {}
   |              ^
   |
= help: Use an explicit type annotation, e.g. set or map<int> myVar = {}
